--- a/examples/graph_representation.ipynb
+++ b/examples/graph_representation.ipynb
@@ -433,12 +433,12 @@
     "\n",
     "\n",
     "class Colors(BaseEnum):\n",
-    "    RED = 'red'\n",
-    "    ORANGE = 'orange'\n",
-    "    GREEN = 'green'\n",
-    "    YELLOW = 'yellow'\n",
-    "    BLUE = 'blue'\n",
-    "    WHITE = 'white'\n",
+    "    BLUE = 'B'\n",
+    "    GREEN = 'G'\n",
+    "    ORANGE = 'O'\n",
+    "    RED = 'R'\n",
+    "    WHITE = 'W'\n",
+    "    YELLOW = 'Y'\n",
     "\n",
     "\n",
     "class Point:\n",
@@ -483,20 +483,34 @@
     "        self.z_left = Layer()\n",
     "        self.z_center = Layer()\n",
     "        self.z_right = Layer()\n",
+    "        self.one = {v.value: Point([v]) for v in Colors.get_names()}\n",
+    "        self.two = {\n",
+    "            ''.join(i.value for i in v): Point(list(v))\n",
+    "            for v in combinations(Colors.get_names(), 2)\n",
+    "        }\n",
+    "        self.three = {\n",
+    "            ''.join(i.value for i in v): Point(list(v))\n",
+    "            for v in combinations(Colors.get_names(), 3)\n",
+    "        }\n",
     "\n",
     "    def _rotate_random(self, how_much: int) -> None:\n",
     "        \"\"\"\n",
     "        \"\"\"\n",
     "\n",
-    "    def set_random_state(self) -> None:\n",
+    "    def set_complete(self) -> None:\n",
+    "        \"\"\"Complete cube\n",
+    "        \"\"\"\n",
+    "\n",
+    "    def set_random(self) -> None:\n",
     "        \"\"\"\n",
     "        \"\"\"\n",
     "\n",
-    "    def set_end_state(self) -> None:\n",
+    "    def reset(self) -> None:\n",
+    "        \"\"\"Reset cube state\n",
     "        \"\"\"\n",
-    "        \"\"\"\n",
+    "        self.__init__()\n",
     "\n",
-    "    def _track_path(self) -> None:\n",
+    "    def _track(self) -> None:\n",
     "        \"\"\"\n",
     "        \"\"\"\n",
     "\n",
@@ -508,24 +522,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[red, orange, green, yellow, blue, white]\n",
-      "[red_orange, red_green, red_yellow, red_blue, red_white, orange_green, orange_yellow, orange_blue, orange_white, green_yellow, green_blue, green_white, yellow_blue, yellow_white, blue_white]\n",
-      "[red_orange_green, red_orange_yellow, red_orange_blue, red_orange_white, red_green_yellow, red_green_blue, red_green_white, red_yellow_blue, red_yellow_white, red_blue_white, orange_green_yellow, orange_green_blue, orange_green_white, orange_yellow_blue, orange_yellow_white, orange_blue_white, green_yellow_blue, green_yellow_white, green_blue_white, yellow_blue_white]\n"
+      "{<Colors.RED: 'red'>: red, <Colors.ORANGE: 'orange'>: orange, <Colors.GREEN: 'green'>: green, <Colors.YELLOW: 'yellow'>: yellow, <Colors.BLUE: 'blue'>: blue, <Colors.WHITE: 'white'>: white}\n",
+      "{(<Colors.RED: 'red'>, <Colors.ORANGE: 'orange'>): red_orange, (<Colors.RED: 'red'>, <Colors.GREEN: 'green'>): red_green, (<Colors.RED: 'red'>, <Colors.YELLOW: 'yellow'>): red_yellow, (<Colors.RED: 'red'>, <Colors.BLUE: 'blue'>): red_blue, (<Colors.RED: 'red'>, <Colors.WHITE: 'white'>): red_white, (<Colors.ORANGE: 'orange'>, <Colors.GREEN: 'green'>): orange_green, (<Colors.ORANGE: 'orange'>, <Colors.YELLOW: 'yellow'>): orange_yellow, (<Colors.ORANGE: 'orange'>, <Colors.BLUE: 'blue'>): orange_blue, (<Colors.ORANGE: 'orange'>, <Colors.WHITE: 'white'>): orange_white, (<Colors.GREEN: 'green'>, <Colors.YELLOW: 'yellow'>): green_yellow, (<Colors.GREEN: 'green'>, <Colors.BLUE: 'blue'>): green_blue, (<Colors.GREEN: 'green'>, <Colors.WHITE: 'white'>): green_white, (<Colors.YELLOW: 'yellow'>, <Colors.BLUE: 'blue'>): yellow_blue, (<Colors.YELLOW: 'yellow'>, <Colors.WHITE: 'white'>): yellow_white, (<Colors.BLUE: 'blue'>, <Colors.WHITE: 'white'>): blue_white}\n",
+      "{(<Colors.RED: 'red'>, <Colors.ORANGE: 'orange'>, <Colors.GREEN: 'green'>): red_orange_green, (<Colors.RED: 'red'>, <Colors.ORANGE: 'orange'>, <Colors.YELLOW: 'yellow'>): red_orange_yellow, (<Colors.RED: 'red'>, <Colors.ORANGE: 'orange'>, <Colors.BLUE: 'blue'>): red_orange_blue, (<Colors.RED: 'red'>, <Colors.ORANGE: 'orange'>, <Colors.WHITE: 'white'>): red_orange_white, (<Colors.RED: 'red'>, <Colors.GREEN: 'green'>, <Colors.YELLOW: 'yellow'>): red_green_yellow, (<Colors.RED: 'red'>, <Colors.GREEN: 'green'>, <Colors.BLUE: 'blue'>): red_green_blue, (<Colors.RED: 'red'>, <Colors.GREEN: 'green'>, <Colors.WHITE: 'white'>): red_green_white, (<Colors.RED: 'red'>, <Colors.YELLOW: 'yellow'>, <Colors.BLUE: 'blue'>): red_yellow_blue, (<Colors.RED: 'red'>, <Colors.YELLOW: 'yellow'>, <Colors.WHITE: 'white'>): red_yellow_white, (<Colors.RED: 'red'>, <Colors.BLUE: 'blue'>, <Colors.WHITE: 'white'>): red_blue_white, (<Colors.ORANGE: 'orange'>, <Colors.GREEN: 'green'>, <Colors.YELLOW: 'yellow'>): orange_green_yellow, (<Colors.ORANGE: 'orange'>, <Colors.GREEN: 'green'>, <Colors.BLUE: 'blue'>): orange_green_blue, (<Colors.ORANGE: 'orange'>, <Colors.GREEN: 'green'>, <Colors.WHITE: 'white'>): orange_green_white, (<Colors.ORANGE: 'orange'>, <Colors.YELLOW: 'yellow'>, <Colors.BLUE: 'blue'>): orange_yellow_blue, (<Colors.ORANGE: 'orange'>, <Colors.YELLOW: 'yellow'>, <Colors.WHITE: 'white'>): orange_yellow_white, (<Colors.ORANGE: 'orange'>, <Colors.BLUE: 'blue'>, <Colors.WHITE: 'white'>): orange_blue_white, (<Colors.GREEN: 'green'>, <Colors.YELLOW: 'yellow'>, <Colors.BLUE: 'blue'>): green_yellow_blue, (<Colors.GREEN: 'green'>, <Colors.YELLOW: 'yellow'>, <Colors.WHITE: 'white'>): green_yellow_white, (<Colors.GREEN: 'green'>, <Colors.BLUE: 'blue'>, <Colors.WHITE: 'white'>): green_blue_white, (<Colors.YELLOW: 'yellow'>, <Colors.BLUE: 'blue'>, <Colors.WHITE: 'white'>): yellow_blue_white}\n"
      ]
     }
    ],
    "source": [
     "cube = Cube()\n",
-    "one = [Point([v]) for v in Colors.get_names()]\n",
-    "two = [Point(list(v)) for v in combinations(Colors.get_names(), 2)]\n",
-    "tree = [Point(list(v)) for v in combinations(Colors.get_names(), 3)]\n",
+    "one = {v: Point([v]) for v in Colors.get_names()}\n",
+    "two = {v: Point(list(v)) for v in combinations(Colors.get_names(), 2)}\n",
+    "tree = {v: Point(list(v)) for v in combinations(Colors.get_names(), 3)}\n",
     "\n",
     "print(one)\n",
     "print(two)\n",
