--- a/examples/cs224w/CS224W_Colab_1_2024_25.ipynb
+++ b/examples/cs224w/CS224W_Colab_1_2024_25.ipynb
@@ -130,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "id": "AUhES1VYo3tB"
       },
@@ -139,12 +139,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Average degree of karate club network is 4.6\n"
+            "Average degree of karate club network is 5\n"
           ]
         }
       ],
       "source": [
-        "def average_degree(num_edges: int, num_nodes: int) -> float:\n",
+        "def average_degree(num_edges: int, num_nodes: int) -> int:\n",
         "  # TODO: Implement this function that takes number of edges\n",
         "  # and number of nodes, and returns the average node degree of\n",
         "  # the graph. Round the result to nearest integer (for example\n",
@@ -154,7 +154,7 @@
         "\n",
         "  # for undirected graph K = 2L/N, where L - num of edges, N - num of nodes\n",
         "\n",
-        "  return round(2*num_edges/num_nodes, 1)\n",
+        "  return int(round(2*num_edges/num_nodes, 0))\n",
         "\n",
         "\n",
         "num_edges = G.number_of_edges()\n",
